Simplify ExistsConstraint
ExistsConstraint matches paths whether the path points to a parent node or leaf node.